# karp

./: .gitignore  manage.py  pyproject.toml
xz/: asgi.py  settings.py  urls.py  wsgi.py
xzz/: apps.py  canon.py  models.py  urls.py  views.py
xzz/migrations/: 0001_initial.py
