[tool.poetry]
name = "xz"
version = "0.1.0"
description = ""
authors = ["m1kc (Max Musatov) <m1kc@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
requests = "^2.24.0"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
